kubernetes-admissioncontroller/kubernetes/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: datadog-admission-controller
  namespace: default
  labels:
    app: datadog-admission-controller
spec:
  type: ClusterIP
  ports:
    - port: 443
      protocol: TCP
      name: https
      targetPort: 443
  selector:
    app: datadog-admission-controller
