kubernetes-admissioncontroller/kubernetes/admission-controller.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: datadog-apm-enabler
webhooks:
- name: admissioncontrol.datadog.com-apm-enabler
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
  clientConfig:
    service:
      namespace: default
      name: datadog-admission-controller
      path: /
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVGRENDQXZ3Q0NRQ2xhN3RBMTFsUmxEQU5CZ2txaGtpRzl3MEJBUTBGQURDQnl6RUxNQWtHQTFVRUJoTUMKVlZNeEN6QUpCZ05WQkFnTUFrTkJNUkV3RHdZRFZRUUhEQWhRWlhSaGJIVnRZVEVPTUF3R0ExVUVFUXdGT1RRNQpOVEl4SFRBYkJnTlZCQWtNRkRJeE1EQWdVeUJOWTBSdmQyVnNiQ0JDYkhaa01Sc3dHUVlEVlFRS0RCSlpaM0psCmJtVWdSVzVsY21kNUlFWjFibVF4RkRBU0JnTlZCQXNNQzBWdVoybHVaV1Z5YVc1bk1STXdFUVlEVlFRRERBcDUKWjNKbGJtVXVZMjl0TVNVd0l3WUpLb1pJaHZjTkFRa0JGaFo2WVdOb0xtRnlibTlzWkVCNVozSmxibVV1WTI5dApNQjRYRFRFNU1ESX [...]
